--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
     <div class="finished" style="display: none;">Download finished!</div>
     <div class="download-ready" style="display: none;">
         <button type="button" class="button download-button" onclick="">
-            <i class="download-icon"></i> Download files
+            <i class="download-icon"></i><span>Download files</span>
         </button>
     </div>
 </div>
